--- a/client/public/index.html
+++ b/client/public/index.html
@@ -5,6 +5,9 @@
     <link rel="shortcut icon" href="%PUBLIC_URL%/favicon.ico" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="theme-color" content="#000000" />
+    <meta name="google-signin-scope" content="profile email">
+    <meta name="google-signin-client_id" content="597723345482-fu6q5sv4nr9s9oqnbvc04fbc5abemau9.apps.googleusercontent.com">
+    <script src="https://apis.google.com/js/platform.js" async defer></script>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/semantic-ui/2.4.1/semantic.min.css"/>
 
     <script src="https://apis.google.com/js/api.js"></script>
